<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layoutOp2">


    <TextView
        android:id="@+id/titleop2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/costumeTitle"
        android:background="@color/orange"
        android:textSize="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleop2"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/eventNameViewop2"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:text="@string/event_name_txt"
        android:textSize="30dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/titleop2" />

    <TextView
        android:id="@+id/timetitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/timePrompt"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameViewop2" />

    <TextView
        android:id="@+id/timeViewop2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_time_txt"
        android:background="@color/offOrange"
        android:textSize="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timetitle" />

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locationPrompt"
        android:background="@color/orange"
        android:gravity="center"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeViewop2" />

    <TextView
        android:id="@+id/addressViewop2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eventLocation"
        android:background="@color/offOrange"
        android:textSize="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTitle" />

    <TextView
        android:id="@+id/descTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/descPrompt"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressViewop2" />

    <TextView
        android:id="@+id/descriptViewop2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_desc_txt"
        android:background="@color/offOrange"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTitle" />

    <Button
        android:id="@+id/calbuttonop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcalendar"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptViewop2" />

</androidx.constraintlayout.widget.ConstraintLayout>