<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:id="@+id/welcomeFragment"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        app:showAsAction="always">
    </item>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calendarFragment"
        android:title="@string/calendar"
        android:icon="@drawable/calendar_icon"
        app:showAsAction="always">
    </item>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpFragment"
        android:title="@string/help"
        android:icon="@drawable/help_icon"
        app:showAsAction="always">
    </item>
</menu>