<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layoutOp3">


    <TextView
        android:id="@+id/titleop3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/christmasTitle"
        android:textSize="50dp"
        android:gravity="center"
        android:background="@color/red"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@tools:sample/avatars"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleop3" />

    <TextView
        android:id="@+id/detailsPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/christmasDetails"
        android:background="@color/red"
        android:textSize="40dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/eventNameViewop3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_name_txt"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsPrompt" />

    <TextView
        android:id="@+id/timeViewop3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_time_txt"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameViewop3" />

    <TextView
        android:id="@+id/addressViewop3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eventLocation"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeViewop3" />

    <TextView
        android:id="@+id/detailsTitleop3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descPrompt"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressViewop3" />

    <TextView
        android:id="@+id/descriptViewop3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_desc_txt"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTitleop3" />

    <Button
        android:id="@+id/calbuttonop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcalendar"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptViewop3" />
</androidx.constraintlayout.widget.ConstraintLayout>