<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteFragment"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp">


    <TextView
        android:id="@+id/invHeadTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_inv_txt"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/eventNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/invHeadTextView">

        <TextView
            android:id="@+id/eventNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name_txt" />

        <EditText
            android:id="@+id/eventNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eventAddLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/eventNameLayout">

        <TextView
            android:id="@+id/eventAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_add_txt" />

        <EditText
            android:id="@+id/eventAddEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/eventDayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/eventAddLayout">

        <TextView
            android:id="@+id/eventDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_day_txt" />
        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/year" />
        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/month" />
        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/day" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/eventTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/eventDayLayout">

        <TextView
            android:id="@+id/eventTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_start_txt" />
        <Spinner
            android:id="@+id/starttimeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/hour" />
        <TextView
            android:id="@+id/eventtoTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_end_txt" />
        <Spinner
            android:id="@+id/endtimeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/hour" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/eventDescLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/eventTimeLayout">

        <TextView
            android:id="@+id/eventDescTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_desc_txt" />

        <EditText
            android:id="@+id/eventDescEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />
    </LinearLayout>
    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>