<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".WelcomeFragment"
    >

    <TextView
        android:id="@+id/invTextView"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:fontFamily="@font/opensans_bold"
        android:textSize="25sp"
        android:textColor="#353535"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/invBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_reg"
        android:text="@string/new_inv_btn_txt"
        android:backgroundTint="#284b63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/invTextView" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginLeft="15dp"
        android:text="@string/upcoming"
        android:fontFamily="@font/opensans_reg"
        android:textColor="#353535"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:listitem="@layout/recyclerview_item" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_reg"
        android:text="@string/clear"
        android:backgroundTint="#284b63"
        app:layout_constraintEnd_toStartOf="@+id/invBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>

